Fixed order creation in integration tests
Changed used currency pair and method of price selection for orders in tests after delisting currency pair `cnd/btc` on Binance

--- a/example/src/config.toml
+++ b/example/src/config.toml
@@ -10,7 +10,8 @@ request_trades = false
 websocket_channels = ["depth20"]
 subscribe_to_market_data = true
 
-currency_pairs = [ { base = "cnd", quote = "btc"  },
-                   { base = "eth", quote = "btc"  },
-                   { base = "eos", quote = "btc"  },
-                   { base = "btc", quote = "usdt"  } ]
+currency_pairs = [
+    { base = "eth", quote = "btc"  },
+    { base = "eos", quote = "btc"  },
+    { base = "btc", quote = "usdt"  }
+]
