--- a/exchanges/binance/tests/control_panel/control_panel.toml
+++ b/exchanges/binance/tests/control_panel/control_panel.toml
@@ -7,4 +7,4 @@ request_trades = false
 websocket_channels = ["depth20"]
 subscribe_to_market_data = true
 
-currency_pairs = [ { base = "cnd", quote = "btc"  } ]
+currency_pairs = [ { base = "btc", quote = "usdt"  } ]
