--- a/exchanges/binance/config.toml
+++ b/exchanges/binance/config.toml
@@ -10,7 +10,8 @@ request_trades = false
 websocket_channels = ["depth20"]
 subscribe_to_market_data = true
 
-currency_pairs = [ { base = "cnd", quote = "btc"  },
-                   { base = "eth", quote = "btc"  },
-                   { base = "eos", quote = "btc"  },
-                   { base = "btc", quote = "usdt"  } ]
+currency_pairs = [
+    { base = "eth", quote = "btc"  },
+    { base = "eos", quote = "btc"  },
+    { base = "btc", quote = "usdt"  }
+]
