--- a/exchanges/binance/tests/binance/lifecycle.toml
+++ b/exchanges/binance/tests/binance/lifecycle.toml
@@ -7,6 +7,6 @@ request_trades = false
 websocket_channels = ["depth20"]
 subscribe_to_market_data = true
 
-currency_pairs = [ { base = "cnd", quote = "btc"  },
+currency_pairs = [ { base = "btc", quote = "usdt"  },
     { base = "eth", quote = "btc"  },
     { base = "eos", quote = "btc"  } ]
