--- a/control_panel/Cargo.toml
+++ b/control_panel/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-files = "0.6.0-beta.7"
-actix-server = "=2.0.0-beta.9"
-actix-web = { version = "4.0.0-beta.10" }
+actix-files = "0.6"
+actix-server = "=2.1"
+actix-web = { version = "4.0" }
 anyhow = "1"
 futures = "0.3"
 jsonrpc-core = "18.0.0"
