--- a/control_panel/Cargo.toml
+++ b/control_panel/Cargo.toml
@@ -18,7 +18,7 @@ log = "0.4"
 mmb_rpc = { path = "../mmb_rpc" }
 mmb_utils = { path = "../mmb_utils" }
 parking_lot = { version = "0.11", features = ["serde"]}
-tokio = { version = "1", features = ["macros", "time", "sync", "rt", "signal"]}
+tokio = { version = "1", features = ["macros", "time", "sync", "signal"]}
 
 
 [[bin]]
