--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -58,6 +58,7 @@ smallstr = { version = "0.2", features = ["serde"]}
 thiserror = "1"
 tokio = { version = "1", features = ["macros", "time", "sync", "rt-multi-thread", "signal"]}
 tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
+tokio-util = "0.7"
 toml_edit = { version = "0.12", features = ["serde"] }
 typetag = "0.1.8"
 
