Added example for `Serum` exchange

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ members = [
     "control_panel",
     "core",
     "core_tests",
-    "example",
+    "examples/binance_demo",
+    "examples/serum_demo",
+    "examples/strategies",
     "exchanges/binance",
     "exchanges/serum",
     "mmb_rpc",
