--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -38,11 +38,13 @@ log = "0.4"
 
 mmb_rpc = { path = "../mmb_rpc" }
 mmb_utils = { path = "../mmb_utils" }
+mmb_database = { path = "../mmb_database" }
+
 mockall_double = "0.2"
 
 once_cell = "1.8"
 
-parking_lot = { version = "0.11", features = ["serde"]}
+parking_lot = { version = "0.12", features = ["serde"]}
 paste = "1"
 
 regex = "1"
@@ -72,3 +74,4 @@ ntest = "0.7.3"
 pretty_assertions = "1"
 rand = "0.8"
 rstest = "0.10"
+tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
