Implemented function for applying migrations

--- a/mmb_database/Cargo.toml
+++ b/mmb_database/Cargo.toml
@@ -8,11 +8,15 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
+futures = "0.3"
 itertools = "0.10"
 log = "0.4"
+ntest = "0.8"
 tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
 serde_json = "1"
-futures = "0.3"
+# In the project with workspaces threre is conflict between features `runtime-tokio-rustls` and `runtime-actix-rustls`.
+# According  https://github.com/launchbadge/sqlx/issues/894#issuecomment-747821912 , for postgres db, we will have same result using only feature `runtime-tokio-rustls`.
+sqlx = { version = "0.5.13", features = [ "chrono", "macros", "postgres", "runtime-tokio-rustls" ] }
 
 [dev-dependencies]
 once_cell = "1.8"
