--- a/visualization/api/Cargo.toml
+++ b/visualization/api/Cargo.toml
@@ -19,5 +19,5 @@ log = "0.4"
 rand = "0.8.5"
 serde = { version = "1.0", features=["derive"]}
 serde_json = "1.0"
-sqlx = { version = "0.5.13", features = [ "chrono", "macros", "postgres", "runtime-actix-rustls" ] }
+sqlx = { version = "0.5.13", features = [ "chrono", "macros", "postgres", "runtime-tokio-rustls" ] }
 tokio = { version = "1.10.0", features = ["fs", "io-util"] }
