--- a/examples/binance_demo_new/src/config.toml
+++ b/examples/binance_demo_new/src/config.toml
@@ -4,8 +4,9 @@ currency_pair = { base = "btc", quote = "usdt" }
 max_amount = 3
 exchange_account_id = "Binance_0"
 
-[core]
-database_url = "postgres://dev:dev@localhost/tests"
+[core.database]
+url = "postgres://dev:dev@localhost/tests"
+migrations = [ "../migrations" ]
 
 [[core.exchanges]]
 exchange_account_id = "Binance_0"
