--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -91,7 +91,7 @@ jobs:
         uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
+          args: --tests --all-features
 
   web:
     name: Web Check & Build
