--- a/mmb_utils/Cargo.toml
+++ b/mmb_utils/Cargo.toml
@@ -20,7 +20,7 @@ parking_lot = { version = "0.12", features = ["serde"]}
 paste = "1"
 rust_decimal = { version = "1", features = ["maths"]}
 rust_decimal_macros = "1"
-serde = { version = "1", features = ["derive", "rc"]}
+serde = { version = "1", features = ["derive"]}
 serde_json = "1"
 smallstr = { version = "0.2", features = ["serde"]}
 tokio = { version = "1", features = ["macros", "time", "sync", "rt", "signal"]}
