--- a/visualization/api/Cargo.toml
+++ b/visualization/api/Cargo.toml
@@ -17,6 +17,9 @@ itertools = "0.10.3"
 jsonwebtoken = "8.1.0"
 log = "0.4"
 rand = "0.8.5"
+rust_decimal = "1.25"
+rust_decimal_macros = "1.25"
+serde-aux = "3.0.1"
 serde = { version = "1", features=["derive"]}
 serde_json = "1.0"
 sqlx = { version = "0.5.13", features = [ "chrono", "macros", "postgres", "runtime-tokio-rustls" ] }
