--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -68,6 +68,7 @@ url = "2.0"
 uuid = { version = "0.8", features = ["serde", "v4"]}
 
 [dev-dependencies]
+bb8-postgres = { version = "0.8", features = ["with-serde_json-1", "with-chrono-0_4"] }
 jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
 mockall = "0.10.2"
 ntest = "0.8"
