--- a/visualization/web/package.json
+++ b/visualization/web/package.json
@@ -18,6 +18,8 @@
     "react-ladda": "^6.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.3.3",
+    "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.5",
     "react-window": "^1.8.7",
     "sockette": "^2.0.6",
     "styled-components": "^4.4.1",
@@ -36,9 +38,9 @@
     "enzyme-to-json": "^3.6.2",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
-    "eslint-config-standard": "^17.0.0",
     "prettier": "^2.6.2",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^16.14.0"
