--- a/exchanges/serum/Cargo.toml
+++ b/exchanges/serum/Cargo.toml
@@ -24,6 +24,7 @@ rand = "0.7"
 rust_decimal = { version = "1", features = ["maths"]}
 rust_decimal_macros = "1"
 safe-transmute = "0.11"
+scopeguard = "1.1"
 serde = "1"
 serde_json = "1"
 serum_dex = "0.5"
