--- a/visualization/api/Cargo.toml
+++ b/visualization/api/Cargo.toml
@@ -12,6 +12,7 @@ actix-web-actors = "4.1"
 casbin = { version = "2.0.9", default-features = false, features = ["runtime-tokio", "logging", "incremental"] }
 chrono = "0.4.19"
 env_logger = "0.9"
+fern = "0.6.1"
 futures = "0.3.21"
 itertools = "0.10.3"
 jsonwebtoken = "8.1.0"
@@ -24,3 +25,4 @@ serde = { version = "1", features=["derive"]}
 serde_json = "1.0"
 sqlx = { version = "0.5.13", features = [ "chrono", "macros", "postgres", "runtime-tokio-rustls" ] }
 tokio = { version = "1.10.0", features = ["fs", "io-util"] }
+toml = "0.5.9"
