--- a/control_panel/Cargo.toml
+++ b/control_panel/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 actix-files = "0.6"
 actix-server = "=2.1"
-actix-web = { version = "4.0" }
+actix-web = "4.1"
 anyhow = "1"
 futures = "0.3"
 jsonrpc-core = "18.0.0"
