Disabled web tests

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -104,4 +104,5 @@ jobs:
           npm install --no-audit
           npm -g install eslint
           eslint src/
+          npm run test a
           npm run build
