Added Postgres on CI Enabled tests related to postgres on CI

--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -27,6 +27,20 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: tests
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -41,6 +55,8 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+        env:
+          DATABASE_URL_TEST: postgresql://postgres:postgres@localhost:5432/tests
 
   fmt:
     name: Rustfmt
