--- a/visualization/api/Cargo.toml
+++ b/visualization/api/Cargo.toml
@@ -9,6 +9,7 @@ actix-broker = "0.4.2"
 actix-cors = "0.6.1"
 actix-web = "4"
 actix-web-actors = "4.1"
+anyhow = "1"
 casbin = { version = "2.0.9", default-features = false, features = ["runtime-tokio", "logging", "incremental"] }
 chrono = "0.4.19"
 env_logger = "0.9"
