--- a/mmb_utils/Cargo.toml
+++ b/mmb_utils/Cargo.toml
@@ -11,9 +11,12 @@ async-trait = "0.1"
 backtrace = "0.3.63"
 bitflags = "1.3.2"
 chrono = { version = "0.4", features = ["serde"]}
-fern = "0.6"
 futures = "0.3"
+
 log = "0.4"
+log4rs = "1.1"
+log4rs-logstash = "0.1"
+
 mockall_double = "0.2"
 once_cell = "1.8"
 parking_lot = { version = "0.12", features = ["serde"]}
