--- a/examples/binance_demo/Cargo.toml
+++ b/examples/binance_demo/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1", features = ["rt-multi-thread"]}
+tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"]}
 anyhow = "1"
 itertools = "0.10"
 
