--- a/examples/binance_demo_new/Cargo.toml
+++ b/examples/binance_demo_new/Cargo.toml
@@ -11,7 +11,7 @@ itertools = "0.10"
 rust_decimal = "1"
 serde = "1"
 serde_json = "1"
-tokio = { version = "1", features = ["rt-multi-thread"]}
+tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"]}
 
 binance = { path = "../../exchanges/binance" }
 mmb_core = { path = "../../core" }
