--- a/examples/serum_demo/Cargo.toml
+++ b/examples/serum_demo/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3"
-tokio = { version = "1", features = ["rt-multi-thread"]}
+tokio = { version = "1", features = ["rt-multi-thread", "parking_lot"]}
 
 mmb_core = { path = "../../core" }
 mmb_utils = { path = "../../mmb_utils" }
