--- a/exchanges/binance/Cargo.toml
+++ b/exchanges/binance/Cargo.toml
@@ -22,7 +22,7 @@ rust_decimal_macros = "1"
 serde = { version = "1", features = ["derive"]}
 serde_json = "1"
 sha2 = "0.9"
-tokio = { version = "1" }
+tokio = { version = "1", features = ["parking_lot"] }
 url = "2.0"
 hyper = { version = "0.14", features = ["http1", "runtime", "client", "tcp"] }
 
