--- a/exchanges/serum/Cargo.toml
+++ b/exchanges/serum/Cargo.toml
@@ -34,7 +34,7 @@ solana-client-helpers = "1.1"
 solana-program = "1.10"
 solana-sdk = "1.10"
 spl-token = { version = "3.2", features = ["no-entrypoint"], default-features = false }
-tokio = { version = "1" }
+tokio = { version = "1", features = ["parking_lot"] }
 typetag = "0.1.8"
 url = "2.0"
 function_name = "0.3.0"
