--- a/mmb_database/Cargo.toml
+++ b/mmb_database/Cargo.toml
@@ -24,4 +24,4 @@ sqlx = { version = "0.5.13", features = [ "chrono", "macros", "postgres", "runti
 [dev-dependencies]
 ntest = "0.8"
 scopeguard = "1.1"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
+tokio = { version = "1", features = ["macros", "rt-multi-thread", "parking_lot"]}
