--- a/examples/binance_demo_new/Cargo.toml
+++ b/examples/binance_demo_new/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
+chrono = "0.4"
 itertools = "0.10"
+log = "0.4"
 rust_decimal = "1"
 serde = "1"
 serde_json = "1"
