--- a/exchanges/serum/Cargo.toml
+++ b/exchanges/serum/Cargo.toml
@@ -16,6 +16,7 @@ itertools = "0.10"
 log = "0.4"
 memoffset = "0.6"
 mmb_core = { path = "../../core/" }
+mmb_domain = { path = "../../domain" }
 mmb_utils = { path = "../../mmb_utils" }
 once_cell = "1.8"
 parking_lot = { version = "0.12", features = ["serde"]}
@@ -29,7 +30,7 @@ serde = "1"
 serde_json = "1"
 serum_dex = "0.5"
 solana-account-decoder = "1.10"
-solana-client = "1.10"
+solana-client = "1.11"
 solana-client-helpers = "1.1"
 solana-program = "1.10"
 solana-sdk = "1.10"
@@ -41,6 +42,4 @@ function_name = "0.3.0"
 
 [dev-dependencies]
 core_tests = { path = "../../core_tests" }
-mmb_core = { path = "../../core" }
-mmb_utils = { path = "../../mmb_utils" }
 strategies = { path = "../../examples/strategies" }
