--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -12,6 +12,7 @@ enum-map = "2"
 hyper = { version = "0.14" }
 itertools = "0.10"
 log = "0.4"
+mmb_database = { path = "../mmb_database" }
 mmb_utils = { path = "../mmb_utils" }
 once_cell = "1.8"
 parking_lot = { version = "0.12", features = ["serde"]}
