Implemented `Bitmex::build_all_symbols` - Implemented adding specific for exchange headers to rest requests - Implemented `Bitmex::build_all_symbols`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "examples/binance_demo_new",
     "examples/strategies",
     "exchanges/binance",
+    "exchanges/bitmex",
     "mmb_database",
     "mmb_rpc",
     "mmb_utils",
