--- a/exchanges/bitmex/Cargo.toml
+++ b/exchanges/bitmex/Cargo.toml
@@ -26,3 +26,11 @@ sha2 = "0.10"
 tinyvec = "1.6"
 tokio = { version = "1", features = ["parking_lot"] }
 url = "2.0"
+
+[dev-dependencies]
+core_tests = { path = "../../core_tests" }
+futures = "0.3"
+jsonrpc-core = "18.0.0"
+jsonrpc-core-client = { version = "18.0.0", features = ["ipc"] }
+mmb_rpc = { path = "../../mmb_rpc" }
+rstest = "0.15"
