--- a/visualization/api/Cargo.toml
+++ b/visualization/api/Cargo.toml
@@ -16,20 +16,19 @@ env_logger = "0.9"
 futures = "0.3.21"
 itertools = "0.10.3"
 jsonwebtoken = "8.1.0"
-
 log = "0.4"
 log4rs = "1.1"
 log4rs-logstash = "0.1"
-
 mmb_domain = { path = "../../domain" }
 mmb_utils = { path = "../../mmb_utils" }
-
+paperclip = { version = "0.7.1", features = ["actix4", "swagger-ui", "chrono", "rust_decimal"] }
 rand = "0.8"
 rust_decimal = "1.25"
 rust_decimal_macros = "1.25"
-serde-aux = "3.0.1"
 serde = { version = "1", features=["derive"]}
+serde-aux = "3.0.1"
 serde_json = "1.0"
 sqlx = { version = "0.6", features = [ "chrono", "macros", "postgres", "runtime-tokio-rustls" ] }
+thiserror = "1"
 tokio = { version = "1.10.0", features = ["fs", "io-util", "parking_lot"] }
 toml = "0.5.9"
