--- a/exchanges/bitmex/Cargo.toml
+++ b/exchanges/bitmex/Cargo.toml
@@ -29,7 +29,7 @@ sha2 = "0.10"
 tinyvec = "1.6"
 tokio = { version = "1", features = ["parking_lot"] }
 url = "2.0"
-urlencoding = "2.1"
+urlencoding_macro = { path = "../../urlencoding_macro/" }
 
 [dev-dependencies]
 core_tests = { path = "../../core_tests" }
