--- a/mmb_utils/Cargo.toml
+++ b/mmb_utils/Cargo.toml
@@ -10,22 +10,22 @@ anyhow = "1"
 async-trait = "0.1"
 backtrace = "0.3.63"
 bitflags = "1.3.2"
-chrono = { version = "0.4", features = ["serde"]}
+chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3"
-
 log = "0.4"
 log4rs = "1.1"
 log4rs-logstash = "0.1"
-
 mockall_double = "0.3"
 once_cell = "1.8"
-parking_lot = { version = "0.12", features = ["serde"]}
+parking_lot = { version = "0.12", features = ["serde"] }
 paste = "1"
-rust_decimal = { version = "1", features = ["maths"]}
+rust_decimal = { version = "1", features = ["maths"] }
 rust_decimal_macros = "1"
-serde = { version = "1", features = ["derive"]}
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+serde_yaml = "0.9"
 smallstr = { version = "0.3", features = ["serde"]}
+subtle-encoding = "0.5.1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "rt", "signal", "parking_lot"]}
 uuid = { version = "1", features = ["serde", "v4"]}
 
