--- a/examples/binance_demo/src/config.toml
+++ b/examples/binance_demo/src/config.toml
@@ -8,7 +8,7 @@ exchange_account_id = "Binance_0"
 exchange_account_id = "Binance_0"
 is_margin_trading = false
 request_trades = false
-websocket_channels = ["depth20@100ms"]
+websocket_channels = ["depth20@100ms", "trade"]
 subscribe_to_market_data = true
 
 currency_pairs = [
