--- a/examples/binance_demo_new/src/config.toml
+++ b/examples/binance_demo_new/src/config.toml
@@ -12,7 +12,7 @@ migrations = [ "../migrations" ]
 exchange_account_id = "Binance_0"
 is_margin_trading = false
 request_trades = false
-websocket_channels = ["depth20@100ms"]
+websocket_channels = ["depth20@100ms", "trade"]
 subscribe_to_market_data = true
 
 currency_pairs = [
