--- a/core_tests/Cargo.toml
+++ b/core_tests/Cargo.toml
@@ -16,6 +16,7 @@ mmb_core = { path = "../core" }
 mmb_domain = { path = "../domain" }
 mmb_utils = { path = "../mmb_utils" }
 
+parking_lot = { version = "0.12", features = ["serde"]}
 rust_decimal = { version = "1", features = ["maths"]}
 rust_decimal_macros = "1"
 
